--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 
 <div class="container">
-    <h1>Home Girl!<br>Click the Button to Reveal a Message</h1>
+    <h1>Home Girl!<br>Click the Button below</h1>
     <button id="revealButton">Reveal Message</button>
 
     <div class="activity-box" id="activityTop">
